<resources>
    <string name="app_name">PopularMovie_2</string>
    <string name="no_overview">Overview is not available.</string>
    <string name="not_available">N/A</string>
    <string name="loading">Loading...</string>
    <string name="no_internet">Internet is not available.</string>
    <string name="error_msg">Unable to reach to server..Please try again later.</string>
    <string name="release_date_title">Release Date : </string>
    <string name="rating_title">Ratings : </string>

    <string name="sort_title">Sort : </string>
    <string-array name="sort_properties_values">
        <item>/movie/popular</item>
        <item>/movie/top_rated</item>
        <item>favorite</item>
    </string-array>

    <string-array name="sort_properties">
        <item>Popular</item>
        <item>Top rated</item>
        <item>Favorite</item>

    </string-array>

    <string name="title_activity_splash">SplashActivity</string>

    <string name="show_reviews">Show Reviews</string>
    <string name="no_reviews">No reviews available</string>


    <string name="trailer">Trailers</string>
    <string name="no_movie_selected">No movie selected</string>
    <string name="no_favorites_found">No favorites found</string>
    <string name="no_movies_found">No movies found</string>
    <string name="no_trailers_found">No trailers found</string>


    <!-- Account type (for sync-adapter authenticator) -->
    <!-- SyncAdapter related -->
    <string name="sync_account_type">popularmovie_2.rajan.example.com</string>
    <string name="content_authority">com.example.rajan.popularmovie_2</string>


</resources>
